--- a/g3acc.css
+++ b/g3acc.css
@@ -22,8 +22,19 @@ font-size: 33px;
 ul{    
 float: right;
 width: auto;
+display: flex;    
     
 }
+
+.hamburger{
+  font-size: 40px;   
+display: none;
+cursor: pointer;    
+}
+
+
+
+
 li{
 display: inline-block;
 padding: 20px 30px;    
@@ -168,5 +179,58 @@ color: firebrick;
 text-shadow: 0px 0px 9px; 
 transition: 0.3 ease all;   
 }
+
+
+
+
+
+/* ميديا كويري للموبايل والتابلت */
+@media (min-width: 768px) {
+ 
+     ul {
+    float: none; /* إلغاء الفلوت */
+    flex-direction: column;
+    position: fixed;
+    top: -100%;
+    left: 0;     
+    width: 100px;
+    background-color: #fff;
+    padding: 20px 0;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    transition: top 0.4s ease;
+  align-items: center;
+    z-index: 1000;
+    margin-bottom: 15px;
+    margin-left: 90%;   
+    }
+
+  ul.active {
+    top: 78px; /* تظهر */
+  }
+
+  .hamburger {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1100;  
+  }
+
+  li {
+    display: block;
+    padding: 15px 0;
+  }
+
+  a {
+    font-size: 18px;
+    margin: 0;
+  }
+}
+
+
+
+
+
+
 
 
