--- a/g3.css
+++ b/g3.css
@@ -1,60 +1,70 @@
+body,html{
+border: 0;
+margin: 0;    
 
+}
+header{
+background-color: #f9f9f9;
+width: 100%;
+height: 78px;
+box-shadow: 0px 0px 9px 0px;    
+margin-bottom: 7%;
+    
+}
 
+h1{
+float: left;
+margin-left: 25px;    
+font-family:sans-serif;
+font-size: 33px;
 
-    * {
-      box-sizing: border-box;
-    }
+}
+ul{    
+float: right;
+width: auto;
+display: flex;    
+    
+}
 
-    body, html {
-      margin: 0;
-      padding: 0;
-      background-color: #f0f0f0;
-      font-family: sans-serif;
+.hamburger{
   
-    }
+display: none;
+cursor: pointer;    
+}
 
-    header {
-      background-color: #f9f9f9;
-      width: 100%;
-      height: auto;
-      box-shadow: 0px 0px 9px 0px;
-      padding: 10px 20px;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-    }
 
-     h1 {
-      font-size: 28px;
-      margin: 0;
-    }
 
-     ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      flex-wrap: wrap;
-    }
 
- li {
-      margin-left: 40px;
-    }
+li{
+display: inline-block;
+padding: 20px 30px;    
+}
 
- li a {
-      text-decoration: none;
-      color: black;
-      font-size: 20px;
-      padding: 6px 12px;
-      border-radius: 6px;
-      transition: 0.3s;
-    margin-right: 80px; 
-    }
+a{    
+text-decoration: none;
+margin-right: 56px;
+font-size: 1.5vw;
+font-family: sans-serif;    
+color: black;
+display: block;
+margin-top: -5px;   
+}
+.btn a{
+margin: 0px;     
+}
 
- a:hover {
-      background-color: skyblue;
-    }
+li a:hover{
+background-color: skyblue;    
+color: black;
+padding-left: 9px;
+    padding-right: 9px;
+padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 7px; 
+transition-duration: 0.3s;   
+}
+
+
 
     .bg img {
       width: 100%;
@@ -137,8 +147,10 @@ box-shadow: 0px  0px 10px;
       margin: 0;
     }
 
+
+
     /* ✅ تابلت */
-    @media (min-width: 600px) {
+    @media (min-width: 0px) {
       .cards > div {
         width: 48%;
         margin-left: 20px;  
@@ -166,6 +178,90 @@ box-shadow: 0px  0px 10px;
           
       }
     }
+
+
+
+/* ميديا كويري للموبايل والتابلت */
+@media (max-width: 768px) {
+ 
+     ul {
+    float: none; /* إلغاء الفلوت */
+    flex-direction: column;
+    position: fixed;
+    top: -100%;
+    left: 0;     
+    width: 100px;
+    background-color: #fff;
+    padding: 20px 0;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    transition: top 0.4s ease;
+  align-items: center;
+    z-index: 1000;
+    margin-bottom: 12px;
+    margin-left: 71%;   
+    }
+
+  ul.active {
+    top: 78px; /* تظهر */
+  }
+
+  .hamburger {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 20px;
+    z-index: 1100;
+    font-size: 25px;  
+  }
+
+  li {
+    display: block;
+    padding: 15px 0;
+  }
+
+  a {
+    font-size: 18px;
+    margin: 0;
+  }
+    
+    h1{
+    font-size: 20px;    
+    margin-top: 6%
+    }   
+    
+    header{
+    height: 60px;    
+    }
+    
+    #username{
+    margin-top: -130px;    
+    }
+    
+    .container{
+    margin-top: -90px;    
+    }
+    
+    .cards{
+    margin-left: 50px;    
+    width: 120%;
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
