--- a/g3.css
+++ b/g3.css
@@ -1,6 +1,8 @@
 body,html{
 border: 0;
-margin: 0;    
+margin: 0; 
+width: 100%;
+box-sizing: border-box;    
 
 }
 header{
@@ -9,7 +11,8 @@ width: 100%;
 height: 78px;
 box-shadow: 0px 0px 9px 0px;    
 margin-bottom: 7%;
-    
+box-sizing: border-box;    
+   
 }
 
 h1{
@@ -67,8 +70,8 @@ transition-duration: 0.3s;
 
 
     .bg img {
-      width: 100%;
-      max-height: 400px;
+      max-width: 100%;
+      height: auto;
       object-fit: cover;
       display: block;
     }
@@ -104,7 +107,6 @@ margin-top: 90px;
 
     .cards > div {
       background-color: #E8E8E8;
-      width: 100%;
       margin-bottom: 20px;
       padding: 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -121,13 +123,26 @@ margin-left: 9%;
 box-shadow: 0px  0px 10px;    
 }
 
+.sec img{
+margin-left: 5%;    
+}
+
+
+.sec:hover{
+  box-shadow: 0px  0px 10px;   
+}
+
+.third:hover{
+     box-shadow: 0px  0px 10px;   
+
+}
 
 
 
 
 
     .cards img {
-      width: 80%;
+      width: 90%;
       height: auto;
       display: block;
     }
@@ -182,15 +197,23 @@ box-shadow: 0px  0px 10px;
 
 
 /* ميديا كويري للموبايل والتابلت */
+
+
 @media (max-width: 768px) {
  
-     ul {
+   
+    
+    
+    
+    
+    ul {
     float: none; /* إلغاء الفلوت */
     flex-direction: column;
     position: fixed;
     top: -100%;
     left: 0;     
-    width: 100px;
+    width: 97px;
+    height: 140px;    
     background-color: #fff;
     padding: 20px 0;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
@@ -198,8 +221,7 @@ box-shadow: 0px  0px 10px;
   align-items: center;
     z-index: 1000;
     margin-bottom: 12px;
-     margin-left: 52%;   
-
+    margin-left: 52%;   
     }
 
   ul.active {
@@ -248,24 +270,6 @@ box-shadow: 0px  0px 10px;
     }
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
