--- a/g3acc.css
+++ b/g3acc.css
@@ -200,7 +200,7 @@ transition: 0.3 ease all;
     transition: top 0.4s ease;
   align-items: center;
     z-index: 1000;
-    margin-bottom: 15px;
+    margin-bottom: 12px;
     margin-left: 90%;   
     }
 
@@ -225,12 +225,12 @@ transition: 0.3 ease all;
     font-size: 18px;
     margin: 0;
   }
+
+    .online{
+    margin-left: -40px    
+    }
+
+
+
 }
-
-
-
-
-
-
-
 
